Refactor of ByteCode processing (WIP)

2010-09-19
Add ; (semicolon) support in lexer, parser, with tests
Message
MessageQueue with tests
AgentObject with tests
agent: support in nil, BehaviorDoesNotUnderstand

2010-09-25
minimal Browser in AjTalk.Gui (WIP)
Boot.st in AjTalk.Gui
ClassDescriptor.ToDefineString
IClass.Category
IClassDescription.GetInstanceVariableNames
IClassDescription.GetClassVariableNames
Move BaseClassDescription.classvariablenames to MetaClass

2010-09-26
Fix BaseClass.ToDefineString
Show class define in Browser
Refactoring Loader
Todo.txt

2010-10-10
BaseClass.ToOutputString() with tests
BaseObject Serializable, ISerialize implements, with tests
Hosting namespace
IHost interface
Host with first tests
ObjectProxy WIP
RemotingHostServer, RemotingHostClient, ClientObject, with tests

2010-10-11
Support in DotNativeObject for set properties, with tests
Now, Method accepts IBehavior instead IClassDescription in constructor
New example NativeRectangle.st with tests
TypeUtilities for resolve types using .AsType(string). Type.GetType() only works in the calling assembly
Fixing lexer bug: !new) now is two tokens !new and )
RemotingHostServer.st example with tests
RemotingHostClient.st example with tests

2010-10-17
RemoteObject with tests
RemotingHostServer.st example with remote object
RemotingHostClient.st example with remote object
Transaction (WIP)
TransactionalValue (WIP) with tests

2010-10-20
New Class Diagrams

2010-10-22
static methods in .NET invoked without !
Few tests added for .NET method invocation

2010-10-24
IObjectDecorator
TransactionManager
TransactionalObject with tests
More tests for TransactionalValue

2010-11-07
CollectionBehavior, .Do and .Select
binaryMethods in DotNetObject
binaryOperators in Parser
Drop Add, Substract... bytecodes
Block.CompileBinarySend
do: for IEnumerable with tests
select: for IEnumerable with tests
ObjectOperators with tests

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/